--- a/components/hover-img.less
+++ b/components/hover-img.less
@@ -3,10 +3,15 @@
 	margin: 20px;
 	box-sizing: border-box;
 	height: 220px;
-	box-shadow: 0 0 3px 0 rgba(0, 0, 255, 1);
+	box-shadow: 0 0 3px 0 #00c4ff;
+	background: #0dd;
+	color: #fff;
 
 	img {
 		height: 200px;
 		display: block;
+	}
+	div {
+		text-align: center;
 	}
 }
